[gd_scene load_steps=3 format=3 uid="uid://baighpghx6fu3"]

[ext_resource type="Script" path="res://UI/Menus/UpgradeMenu/UpgradeMenu.gd" id="1"]
[ext_resource type="Script" path="res://UI/Menus/UpgradeMenu/CardDisplay/CardDisplay.gd" id="2_ia3xo"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1")
delay_on_levelling_up_in_seconds = 0.5
0 = 3
1 = 3
2 = 3
3 = 2
4 = 2
5 = 0

[node name="CardDisplay" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -81.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1
script = ExtResource("2_ia3xo")

[connection signal="card_selected" from="CardDisplay" to="." method="_on_card_display_card_selected"]
